crates/oxidoc/tests/snapshots/golden_writer__html__figure__figure-captioned.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<figure>
<img src="pic.png" title="fig title" alt="a caption" />
<figcaption aria-hidden="true">a caption</figcaption>
</figure>
