crates/oxidoc/tests/snapshots/golden_writer__html__figure__figure-no-alt.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p><img src="pic.png" /></p>
