crates/oxidoc/tests/snapshots/golden_writer__html__figure__figure-with-dims.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<figure>
<img src="pic.png" title="t" width="200" alt="alt text" />
<figcaption aria-hidden="true">alt text</figcaption>
</figure>
